# Beam

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  dump.rdb  entrypoint.sh  manage.py  pyproject.toml
core/: routing.py
core/api/: serializers.py  urls.py  views.py
core/app/: asgi.py  settings.py  urls.py  wsgi.py
core/app/settings/: __init__.py  base.py  local.py  prod.py
core/product/: consumers.py  urls.py
core/product/migrations/: 0001_initial.py
core/product/models/: products.py
core/product/static/: main.js
core/product/templates/: base.html
core/product/templates/product/: category_form.html  category_form_delete.html  category_list.html  customer_confirm_delete.html  customer_form.html  customer_list.html  order_confirm_delete.html  order_form.html  order_list.html  orderitem_confirm_delete.html  orderitem_form.html  orderitem_list.html  product_confirm_delete.html  product_form.html  product_list.html  supplier_confirm_delete.html  supplier_form.html  supplier_list.html
core/product/templates/products/: index.html
core/product/views/: products.py
docker_compose/: app.yaml  storages.yaml
docker_compose/nginx/: Dockerfile  default.conf
