[tool.poetry]
name = "beam"
version = "0.1.0"
description = ""
authors = ["Reversep <adilet.t.k@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.3"
djangorestframework = "^3.16.0"
environ = "^1.0"
drf-yasg = "^1.21.10"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
