[tool.poetry]
name = "beam"
version = "0.1.0"
description = ""
authors = ["Reversep <adilet.t.k@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.3"
djangorestframework = "^3.16.0"
drf-yasg = "^1.21.10"
psycopg2-binary = "^2.9.10"
channels = "^4.2.2"
channels-redis = "^4.2.1"
redis = "^6.2.0"
daphne = "^4.2.1"
django-environ = "^0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
